css/custom.css
#navbars {
  font-family: 'Source Sans Pro', sans-serif;
  -webkit-filter: drop-shadow(0px 0px 4px #000);
  font-size: 4em;
  cursor: pointer;
  padding-left: 20px;
  color: #fff;
  transition: 0.3s;
  display:block;
  opacity: 0.8;
}

#logo {
  opacity: 0.85;
  height: 100%;
  -webkit-filter: drop-shadow(0px 0px 5px #fff);
}

#footer {
  padding-top: 30px;
}

#footer .copyright {
  padding: 20px;
  text-decoration: none;
  font-size: 15px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

footer .socialicon {
  width: 64px;
  height: 64px;
  drop-shadow: 0px 0px 3px #fff;
  opacity: 1;
}

body {
  font-family: 'Source Sans Pro', sans-serif;
}

.ESA {
  font-family: 'Permanent Marker', cursive;
  position: fixed;
  width: 70%; /* Set your desired with */
  z-index: 2; /* Make sure its above other items. */
  height: 50%;
  top: 30%;
  left: 50%;
  margin-top: 0%; /* Changes with height. */
  margin-left: -35%; /* Your width divided by 2. */
  /* You will not need the below, its only for styling   purposes. */
  padding: 10px;
  text-align: right;
}

#main-content {
  position: fixed;
  width: 70%; /* Set your desired with */
  z-index: 2; /* Make sure its above other items. */
  height: 75%;
  top: 30%;
  left: 50%;
  margin-top: -10%; /* Changes with height. */
  margin-left: -35%; /* Your width divided by 2. */
  /* You will not need the below, its only for styling   purposes. */
  padding: 10px;
  text-align: center;
}

.subcontent {
  background: rgba(255,255,255,0.90);
  border-radius: 10px;
}

.subcontent h1 {
  font-family: 'Permanent Marker', cursive;
  padding-top: 10px;
  color: #009574;
  -webkit-filter: drop-shadow(3px 3px 10px #FFF);
  text-shadow: 0px 0px 6px #FFF;
  font-size: 4em;
  border-bottom: rgba(0,255,255,0.90);
}

.subcontent .innercontent{
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  color: #000;
  font-size: 1.15em;
  -webkit-filter: drop-shadow(3px 3px 10px #FFF);
  text-shadow: 0px 0px 6px #FFF;
}

.sidenav {
  font-family: 'Permanent Marker', cursive;
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  background: rgba(0,0,0,0.90);
  overflow-x: hidden;
  transition: 0.2s;
  padding-top: 60px;
  opacity: 0.8;
}

.sidenav a {
  padding: 10px 0px 0px 32px;
  text-decoration: none;
  font-size: 26px;
  color: #818181;
  display: block;
  transition: 0.2s;
}

.sidenav a:hover, .offcanvas a:focus{
  color: #f1f1f1;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }
}

/* Initially hide all section divs */
#about, #initiatives, #eboard, #partners, #members, #newsletter, #contact {
  display: none;
}

/* Loading screen settings */
.no-js #loader { display: none;  }
.js #loader { display: block; position: absolute; left: 100px; top: 0; }
.se-pre-con {
  position: fixed;
  left: 0px;
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background: url('') no-repeat center center #000; /* Could add ESA logo if we want */
  /* -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;*/
}

